--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_ENV=local
 APP_DEBUG=true
-APP_KEY=<secret>
+APP_KEY=123456789abcdefghijklmnopqrstuvy
 
 DB_HOST=localhost
 DB_DATABASE=<db_name>
