Updated episode management to the new version.
The "raw add" feature was not yet updated.

--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@ Thumbs.db
 
 storage/search/
 public/img/upload/
-public/css/app.css
+public/css/app.css*
 _ide_helper.php
 
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio
