--- a/composer.json
+++ b/composer.json
@@ -9,13 +9,15 @@
 	"type": "project",
 	"require": {
 		"php": ">=5.5.9",
-		"laravel/framework": "5.1.*",
-		"laravelcollective/html": "5.1.*",
+		"laravel/framework": ">=5.2.0",
+		"laravelcollective/html": ">=5.2.0",
 		"mmanos/laravel-search": "dev-master",
 		"zendframework/zendsearch": "dev-master",
-		"nesbot/carbon": "~1.20"
+		"nesbot/carbon": ">=1.20"
 	},
 	"require-dev": {
+		"symfony/dom-crawler": "~3.0",
+		"symfony/css-selector": "~3.0",
 		"fzaninotto/faker": "~1.4",
 		"mockery/mockery": "0.9.*",
 		"phpunit/phpunit": "~4.0",
