--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,8 @@ php:
 env:
 
 before_install:
+  - nvm install 4.2
+  - nvm use 4.2
   - mysql -e 'CREATE DATABASE aenianos;'
   - composer install
-  - npm install
   - php artisan migrate --seed
