More messing around with notifications

--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,5 @@ MAIL_USERNAME=<google_account>
 MAIL_PASSWORD=<google_password>
 MAIL_ADDRESS=<google_account>
 MAIL_ADDRESS_NAME=<mail_name>
+
+PUSH_KEY=<key found in https://console.cloud.google.com/apis/credentials>
